name_space.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-ui
  labels:
    name: react-ui
