deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deploy
  namespace: react-ui
  labels:
    app: react-app
spec:
  replicas: 1 # Consider scaling for higher availability
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - react-app
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: react-app-container
          image: gcr.io/kxn-dev-432901/kxn-dev/irys-ui-img:148
          ports:
            - containerPort: 85  # Only HTTP, since HTTPS is handled by NGINX Ingress
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "3Gi"
          securityContext:
            runAsNonRoot: true  # Enforce running as a non-root user
            allowPrivilegeEscalation: false  # Prevent privilege escalation
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 3005 # Update this to match the target port
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3005  # Update this to match the target port
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
