service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: react-ui
  labels:
    app: react-app
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: react-app
  ports:
    - name: http
      protocol: TCP
      port: 85        # This is the port the service will expose
      targetPort: 3005 # This is the port the container is listening on
  type: ClusterIP
