monitoring_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitoring.simplereact.online
      secretName: tls-monitoring-secret
  rules:
    - host: monitoring.simplereact.online
      http:
        paths:
          - path: /promentheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
